# bayesian_feature_selection

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
configs/: README.md  default.yaml  example_with_data.yaml  quick_test.yaml  sparse_highdim.yaml
demo/: horseshoe_mcmc_feature_selection_demo.ipynb
docs/: Makefile  api.rst  conf.py  data_loading.md  index.rst  installation.rst  make.bat  methodology.rst  tutorial.rst  usage.rst
examples/: data_loader_example.py
src/bayesian_feature_selection/: __init__.py  bayesian_feature_selection.py  cli.py  config.py  data_loader.py  visualization.py
tests/: __init__.py  test_bayesian_feature_selection.py  test_config.py  test_data_loader.py  test_horseshoe_glm.py  test_integration.py
