[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian_feature_selection"
version = "0.1.0"
description = "Scalable Bayesian feature selection using horseshoe priors with NumPyro/JAX"
readme = "README.rst"
authors = [
  {name = "Hong Mu", email = "hm761@nyu.edu"}
]
maintainers = [
  {name = "Hong Mu", email = "hm761@nyu.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT license"}
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpyro>=0.13.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "arviz>=0.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff",
    "jupyter",
    "ipython",
]
gpu = [
    "jax[cuda12_pip]",
]

[project.scripts]
bayesian-fs = "bayesian_feature_selection.cli:app"

[project.urls]
bugs = "https://github.com/MacroMagic/bayesian_feature_selection/issues"
changelog = "https://github.com/MacroMagic/bayesian_feature_selection/blob/master/changelog.md"
homepage = "https://github.com/MacroMagic/bayesian_feature_selection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

